student-dist/assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'
    4           | class_list error ';'

    5 class: CLASS TYPEID '{' feature_list '}'
    6      | CLASS TYPEID INHERITS parent_list '{' feature_list '}'

    7 parent_list: TYPEID
    8            | parent_list ',' TYPEID

    9 feature_list: %empty
   10             | feature_list feature ';'
   11             | feature_list error ';'

   12 feature: OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expression
   14        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'

   15 formal_list: %empty
   16            | formal
   17            | formal_list ',' formal
   18            | formal_list ',' error

   19 formal: OBJECTID ':' TYPEID

   20 expression: OBJECTID ASSIGN expression
   21           | expression '.' OBJECTID '(' expression_list ')'
   22           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   23           | OBJECTID '(' expression_list ')'
   24           | IF expression THEN expression ELSE expression FI
   25           | WHILE expression LOOP expression POOL
   26           | '{' expression_block '}'
   27           | LET let_declaration
   28           | CASE expression OF case_declarations ESAC
   29           | NEW TYPEID
   30           | ISVOID expression
   31           | expression '+' expression
   32           | expression '-' expression
   33           | expression '*' expression
   34           | expression '/' expression
   35           | '~' expression
   36           | expression '<' expression
   37           | expression LE expression
   38           | expression '=' expression
   39           | NOT expression
   40           | '(' expression ')'
   41           | OBJECTID
   42           | INT_CONST
   43           | STR_CONST
   44           | BOOL_CONST

   45 expression_list: %empty
   46                | expression
   47                | expression_list ',' expression
   48                | expression_list ',' error

   49 expression_block: expression ';'
   50                 | expression_block expression ';'
   51                 | expression_block error ';'

   52 let_declaration: OBJECTID ':' TYPEID IN expression
   53                | OBJECTID ':' TYPEID ASSIGN expression IN expression
   54                | OBJECTID ':' TYPEID ASSIGN error IN expression
   55                | OBJECTID ':' TYPEID ',' let_declaration
   56                | OBJECTID ':' TYPEID ASSIGN expression ',' let_declaration
   57                | OBJECTID ':' TYPEID ASSIGN error ',' let_declaration

   58 case_declarations: case_expression ';'
   59                  | case_declarations case_expression ';'

   60 case_expression: OBJECTID ':' TYPEID DARROW expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 21 22 23 40
')' (41) 14 21 22 23 40
'*' (42) 33
'+' (43) 31
',' (44) 8 17 18 47 48 55 56 57
'-' (45) 32
'.' (46) 21 22
'/' (47) 34
':' (58) 12 13 14 19 52 53 54 55 56 57 60
';' (59) 2 3 4 10 11 49 50 51 58 59
'<' (60) 36
'=' (61) 38
'@' (64) 22
'{' (123) 5 6 14 26
'}' (125) 5 6 14 26
'~' (126) 35
error (256) 4 11 18 48 51 54 57
CLASS (258) 5 6
ELSE (259) 24
FI (260) 24
IF (261) 24
IN (262) 52 53 54
INHERITS (263) 6
LET (264) 27
LOOP (265) 25
POOL (266) 25
THEN (267) 24
WHILE (268) 25
CASE (269) 28
ESAC (270) 28
OF (271) 28
DARROW (272) 60
NEW (273) 29
ISVOID (274) 30
STR_CONST (275) 43
INT_CONST (276) 42
BOOL_CONST (277) 44
TYPEID (278) 5 6 7 8 12 13 14 19 22 29 52 53 54 55 56 57 60
OBJECTID (279) 12 13 14 19 20 21 22 23 41 52 53 54 55 56 57 60
ASSIGN (280) 13 20 53 54 56 57
NOT (281) 39
LE (282) 37
ERROR (283)
LET_PREC (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3 4, on right: 1 3 4
class (49)
    on left: 5 6, on right: 2 3
parent_list (50)
    on left: 7 8, on right: 6 8
feature_list (51)
    on left: 9 10 11, on right: 5 6 10 11
feature (52)
    on left: 12 13 14, on right: 10
formal_list (53)
    on left: 15 16 17 18, on right: 14 17 18
formal (54)
    on left: 19, on right: 16 17
expression (55)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44, on right: 13 14 20 21 22 24 25 28 30 31 32
    33 34 35 36 37 38 39 40 46 47 49 50 52 53 54 56 60
expression_list (56)
    on left: 45 46 47 48, on right: 21 22 23 47 48
expression_block (57)
    on left: 49 50 51, on right: 26 50 51
let_declaration (58)
    on left: 52 53 54 55 56 57, on right: 27 55 56 57
case_declarations (59)
    on left: 58 59, on right: 28 59
case_expression (60)
    on left: 60, on right: 58 59


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS . TYPEID '{' feature_list '}'
    6      | CLASS . TYPEID INHERITS parent_list '{' feature_list '}'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class ';'
    4           | class_list . error ';'

    error  shift, and go to state 7
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class . ';'

    ';'  shift, and go to state 9


State 5

    5 class: CLASS TYPEID . '{' feature_list '}'
    6      | CLASS TYPEID . INHERITS parent_list '{' feature_list '}'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 6

    0 $accept: program $end .

    $default  accept


State 7

    4 class_list: class_list error . ';'

    ';'  shift, and go to state 12


State 8

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 13


State 9

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


State 10

    6 class: CLASS TYPEID INHERITS . parent_list '{' feature_list '}'

    TYPEID  shift, and go to state 14

    parent_list  go to state 15


State 11

    5 class: CLASS TYPEID '{' . feature_list '}'

    $default  reduce using rule 9 (feature_list)

    feature_list  go to state 16


State 12

    4 class_list: class_list error ';' .

    $default  reduce using rule 4 (class_list)


State 13

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


State 14

    7 parent_list: TYPEID .

    $default  reduce using rule 7 (parent_list)


State 15

    6 class: CLASS TYPEID INHERITS parent_list . '{' feature_list '}'
    8 parent_list: parent_list . ',' TYPEID

    '{'  shift, and go to state 17
    ','  shift, and go to state 18


State 16

    5 class: CLASS TYPEID '{' feature_list . '}'
   10 feature_list: feature_list . feature ';'
   11             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 21

    feature  go to state 22


State 17

    6 class: CLASS TYPEID INHERITS parent_list '{' . feature_list '}'

    $default  reduce using rule 9 (feature_list)

    feature_list  go to state 23


State 18

    8 parent_list: parent_list ',' . TYPEID

    TYPEID  shift, and go to state 24


State 19

   11 feature_list: feature_list error . ';'

    ';'  shift, and go to state 25


State 20

   12 feature: OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expression
   14        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 26
    '('  shift, and go to state 27


State 21

    5 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


State 22

   10 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 28


State 23

    6 class: CLASS TYPEID INHERITS parent_list '{' feature_list . '}'
   10 feature_list: feature_list . feature ';'
   11             | feature_list . error ';'

    error     shift, and go to state 19
    OBJECTID  shift, and go to state 20
    '}'       shift, and go to state 29

    feature  go to state 22


State 24

    8 parent_list: parent_list ',' TYPEID .

    $default  reduce using rule 8 (parent_list)


State 25

   11 feature_list: feature_list error ';' .

    $default  reduce using rule 11 (feature_list)


State 26

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 30


State 27

   14 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 31

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 32
    formal       go to state 33


State 28

   10 feature_list: feature_list feature ';' .

    $default  reduce using rule 10 (feature_list)


State 29

    6 class: CLASS TYPEID INHERITS parent_list '{' feature_list '}' .

    $default  reduce using rule 6 (class)


State 30

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 12 (feature)


State 31

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 35


State 32

   14 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   17 formal_list: formal_list . ',' formal
   18            | formal_list . ',' error

    ','  shift, and go to state 36
    ')'  shift, and go to state 37


State 33

   16 formal_list: formal .

    $default  reduce using rule 16 (formal_list)


State 34

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 52


State 35

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 53


State 36

   17 formal_list: formal_list ',' . formal
   18            | formal_list ',' . error

    error     shift, and go to state 54
    OBJECTID  shift, and go to state 31

    formal  go to state 55


State 37

   14 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 56


State 38

   24 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 57


State 39

   27 expression: LET . let_declaration

    OBJECTID  shift, and go to state 58

    let_declaration  go to state 59


State 40

   25 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 60


State 41

   28 expression: CASE . expression OF case_declarations ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 61


State 42

   29 expression: NEW . TYPEID

    TYPEID  shift, and go to state 62


State 43

   30 expression: ISVOID . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 63


State 44

   43 expression: STR_CONST .

    $default  reduce using rule 43 (expression)


State 45

   42 expression: INT_CONST .

    $default  reduce using rule 42 (expression)


State 46

   44 expression: BOOL_CONST .

    $default  reduce using rule 44 (expression)


State 47

   20 expression: OBJECTID . ASSIGN expression
   23           | OBJECTID . '(' expression_list ')'
   41           | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 41 (expression)


State 48

   39 expression: NOT . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 66


State 49

   35 expression: '~' . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 67


State 50

   26 expression: '{' . expression_block '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression        go to state 68
    expression_block  go to state 69


State 51

   40 expression: '(' . expression ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 70


State 52

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 13 (feature)


State 53

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 54

   18 formal_list: formal_list ',' error .

    $default  reduce using rule 18 (formal_list)


State 55

   17 formal_list: formal_list ',' formal .

    $default  reduce using rule 17 (formal_list)


State 56

   14 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 80


State 57

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   24           | IF expression . THEN expression ELSE expression FI
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    THEN  shift, and go to state 81
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 58

   52 let_declaration: OBJECTID . ':' TYPEID IN expression
   53                | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   54                | OBJECTID . ':' TYPEID ASSIGN error IN expression
   55                | OBJECTID . ':' TYPEID ',' let_declaration
   56                | OBJECTID . ':' TYPEID ASSIGN expression ',' let_declaration
   57                | OBJECTID . ':' TYPEID ASSIGN error ',' let_declaration

    ':'  shift, and go to state 82


State 59

   27 expression: LET let_declaration .

    $default  reduce using rule 27 (expression)


State 60

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   25           | WHILE expression . LOOP expression POOL
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LOOP  shift, and go to state 83
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 61

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   28           | CASE expression . OF case_declarations ESAC
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    OF   shift, and go to state 84
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 62

   29 expression: NEW TYPEID .

    $default  reduce using rule 29 (expression)


State 63

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   30           | ISVOID expression .
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 30 (expression)


State 64

   20 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expression  go to state 85


State 65

   23 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 45 (expression_list)

    expression       go to state 86
    expression_list  go to state 87


State 66

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression
   39           | NOT expression .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '+'  shift, and go to state 74
    '-'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 39 (expression)


State 67

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | '~' expression .
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 35 (expression)


State 68

   21 expression: expression . '.' OBJECTID '(' expression_list ')'
   22           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression
   49 expression_block: expression . ';'
